
              sbigtopgm: fix recognition of compressed image.  Broken in
              Netpbm 10.70 (March 2015).

              pbmtogo: Fix bug: garbage first row.  Broken at least since
              November 1989.

              pbmtogo: Fix bug: buffer overrun with certain input.  Broken
              at least since November 1989.

              libnetpbm: pm_stripeq: fix bug: wild pointer access when
              comparator is shorter than comparand.  Doesn't affect function,
              but could cause crash or privacy exposure.  Affects reading of a
              PAM file by any program.  Introduced in one of Netpbm 10.27
              (March 2005) through 10.35 (August 2006).

              pnmconvol: Fix bug: wrong output for pixels that convolve to
              negative values (should be clipped to zero).  Introduced in
              Netpbm 10.68 (September 2014).

              pbmtog3: Fix buffer overrun.  Introduced in Netpbm 10.23
              (July 2004).

              cameratopam: Fix arithmetic underflow in JPEG processing;
              unknown effect.

              pbmtoxbm: Fix bug: crash with zero width input.  Broken in
              Netpbm 10.37 (December 2006).

              sbigtopgm: fix buffer overrun with invalid input image.  Always
              present (sbigtopgm was new in Netpbm 8.3 (March 2000)).

              pnmtorle: Fix buffer overrun with long file name.  Always
              present.  (pnmtorle was new to Netpbm in Netpbm 9.0 (April
              2000)).

              pbmtopk: Fix buffer overrun with long file name.  Always
              present.  (pbmtopk was new in Netpbm 1 (March 1991)).

              pktopbm: Fix buffer overrun with long file name.  Always
              present.  (pbmtopk was new in Netpbm 1 (March 1991)).

              ppmtoyuvsplit: Fix buffer overrun with long file name.  Always
              present.  (New in Netpbm 1 (March 1991)).
